Fix main nav dropdown flicker on pageload.

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -21,6 +21,10 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+[x-cloak] {
+  display: none !important;
+}
+
 /*
 Adjustments and Overrides
 =========================
